--- a/doc/x200.md
+++ b/doc/x200.md
@@ -17,5 +17,13 @@ Map Hardware buttons to keycodes as a service
 - /usr/share/X11/xorg.conf.d/40-libinput.conf   
 Comment out disabling keyboard in tablet mode
 
-- /etc/udev/rules.d/hd_power_save.rules  
 Set max_performance because patriot drive seems to have issue with med_power_with_dipm
+- /etc/udev/rules.d/hd_power_save.rules  
+ACTION=="add", SUBSYSTEM=="scsi_host", KERNEL=="host\*", ATTR{link_power_management_policy}="max_performance"
+
+Set backlight to be writable
+- /etc/udev/rules.d/backlight.rules
+ACTION=="add", SUBSYSTEM=="backlight", KERNEL=="acpi_video0", RUN+="/bin/chgrp video /sys/class/backlight/%k/brightness"
+ACTION=="add", SUBSYSTEM=="backlight", KERNEL=="acpi_video0", RUN+="/bin/chmod g+w /sys/class/backlight/%k/brightness"
+
+
