--- a/doc/x200.md
+++ b/doc/x200.md
@@ -26,4 +26,6 @@ Set backlight to be writable
 ACTION=="add", SUBSYSTEM=="backlight", KERNEL=="acpi_video0", RUN+="/bin/chgrp video /sys/class/backlight/%k/brightness"
 ACTION=="add", SUBSYSTEM=="backlight", KERNEL=="acpi_video0", RUN+="/bin/chmod g+w /sys/class/backlight/%k/brightness"
 
-
+Disable Bluetooth
+- /etc/udev/rules.d/50-bluetooth.rules
+SUBSYSTEM=="rfkill", ATTR{type}=="bluetooth", ATTR{state}="0"
