Add digital ocean docs, add screen command

--- a/doc/x200.md
+++ b/doc/x200.md
@@ -9,6 +9,13 @@
 - I disabled the CPU Power management from the Bios because of the high pitched noises it made
   (credit to the Arch wiki. Damn it's comprehensive per device)
 
+## Cheatsheet
+
+Adding Second Screen
+```
+xrandr --output VGA-1 --auto --right-of LVDS-1
+```
+
 ## System Files Changed
 
 - /etc/systemd/system/setkeycodes.service  
