--- a/doc/x200.md
+++ b/doc/x200.md
@@ -36,3 +36,6 @@ ACTION=="add", SUBSYSTEM=="backlight", KERNEL=="acpi_video0", RUN+="/bin/chmod g
 Disable Bluetooth
 - /etc/udev/rules.d/50-bluetooth.rules
 SUBSYSTEM=="rfkill", ATTR{type}=="bluetooth", ATTR{state}="0"
+
+## Setting default application for mimetype
+xdg-mime default sxiv.desktop image/png
