--- a/setup/install
+++ b/setup/install
@@ -3,7 +3,7 @@ DOTFILES="$HOME/.dotfiles"
 PC=$(uname -n)
 
 # Make appropriate directories if necessary
-mkdir -p ~/.config/i3 ~/.config/i3blocks ~/.config/phpactor ~/.config/X11 ~/.config/xbindkeys ~/.config/alacritty ~/.config/git 2>/dev/null
+mkdir -p ~/.config/i3 ~/.config/i3blocks ~/.config/phpactor ~/.config/X11 ~/.config/xbindkeys ~/.config/alacritty ~/.config/git ~/.config/neovim 2>/dev/null
 
 # Copy all config files (don't overwrite)
 cp -nv "$DOTFILES/config/emacs" $( $DOTFILES/setup/getlocal emacs )
